# engine

./: .gitignore  CHANGELOG.md  Makefile  example.py  pyproject.toml  setup.cfg
src/: __init__.py  contracts.py  exceptions.py  factories.py  objects.py
src/engine/: __init__.py
src/pygame/: exceptions.py  pygame_engine.py
src/pygame_lib/: pygame_engine.py
src/pygame_lib/services/: pygame_translate_game_objects.py
