[project]
name = "engine"
version = "0.2.1"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version = "0.2.1"
update_changelog_on_bump = true
major_version_zero = true

[tool.setuptools.packages.find]
where = ["src"]

version_files = [
    "pyproject.toml:version"
]